finish translation RF-2013 to RKOON

--- a/pr_2.ui
+++ b/pr_2.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1028</width>
-    <height>542</height>
+    <height>487</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -19,7 +19,7 @@
   <property name="minimumSize">
    <size>
     <width>1028</width>
-    <height>542</height>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -578,7 +578,7 @@ QTabBar::tab:!selected {
 }</string>
        </property>
        <property name="currentIndex">
-        <number>2</number>
+        <number>0</number>
        </property>
        <widget class="QWidget" name="in_rf_stars_nonetab">
         <attribute name="title">
@@ -702,7 +702,17 @@ QComboBox::drop-down {width:1}
         </property>
         <item>
          <property name="text">
-          <string>1</string>
+          <string/>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>1.1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>1.2</string>
          </property>
         </item>
         <item>
@@ -712,17 +722,12 @@ QComboBox::drop-down {width:1}
         </item>
         <item>
          <property name="text">
-          <string>112</string>
+          <string>3.2</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>3</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>33</string>
+          <string>3.3</string>
          </property>
         </item>
        </widget>
@@ -804,27 +809,57 @@ QComboBox::drop-down {width:1}
         </property>
         <item>
          <property name="text">
-          <string>1</string>
+          <string/>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2</string>
+          <string>1.1</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>112</string>
+          <string>1.2</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>3</string>
+          <string>1.3</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>33</string>
+          <string>2.1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2.2</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>2.3</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>3.1</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>3.2</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>3.3</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>4</string>
          </property>
         </item>
        </widget>
@@ -906,27 +941,22 @@ QComboBox::drop-down {width:1}
         </property>
         <item>
          <property name="text">
+          <string/>
+         </property>
+        </item>
+        <item>
+         <property name="text">
           <string>1</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>2</string>
+          <string>2+3</string>
          </property>
         </item>
         <item>
          <property name="text">
-          <string>112</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>3</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>33</string>
+          <string>4</string>
          </property>
         </item>
        </widget>
@@ -1982,8 +2012,14 @@ border-bottom-left-radius: 30px;</string>
               <pointsize>14</pointsize>
              </font>
             </property>
+            <property name="layoutDirection">
+             <enum>Qt::LeftToRight</enum>
+            </property>
             <property name="text">
              <string/>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
@@ -2018,6 +2054,9 @@ border-bottom-left-radius: 30px;</string>
             <property name="text">
              <string/>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
            </widget>
           </item>
          </layout>
@@ -2048,6 +2087,9 @@ border-bottom-left-radius: 30px;</string>
             <property name="text">
              <string/>
             </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
            </widget>
           </item>
          </layout>
@@ -2063,7 +2105,7 @@ border-bottom-left-radius: 30px;</string>
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="2,1,6">
+         <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="0,1">
           <item>
            <widget class="QLabel" name="label_5">
             <property name="font">
@@ -2088,25 +2130,15 @@ border-bottom-left-radius: 30px;</string>
             <property name="text">
              <string/>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="out_rk_e_lett">
-            <property name="font">
-             <font>
-              <family>Roboto Light</family>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string/>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="2,1,6">
+         <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,1">
           <item>
            <widget class="QLabel" name="label_4">
             <property name="font">
@@ -2131,25 +2163,15 @@ border-bottom-left-radius: 30px;</string>
             <property name="text">
              <string/>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="out_rk_g_lett_2">
-            <property name="font">
-             <font>
-              <family>Roboto Light</family>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string/>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
          </layout>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="2,1,6">
+         <layout class="QHBoxLayout" name="horizontalLayout_5" stretch="0,1">
           <item>
            <widget class="QLabel" name="label_6">
             <property name="font">
@@ -2174,18 +2196,8 @@ border-bottom-left-radius: 30px;</string>
             <property name="text">
              <string/>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="out_rk_g_lett">
-            <property name="font">
-             <font>
-              <family>Roboto Light</family>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
-            <property name="text">
-             <string/>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
             </property>
            </widget>
           </item>
@@ -2422,39 +2434,7 @@ border-bottom-left-radius: 30px;</string>
   <connection>
    <sender>out_categories</sender>
    <signal>currentChanged(int)</signal>
-   <receiver>out_rk_e_lett</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>811</x>
-     <y>40</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>827</x>
-     <y>286</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>out_categories</sender>
-   <signal>currentChanged(int)</signal>
-   <receiver>out_rk_g_lett_2</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>948</x>
-     <y>39</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>857</x>
-     <y>333</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>out_categories</sender>
-   <signal>currentChanged(int)</signal>
-   <receiver>out_rk_g_lett</receiver>
+   <receiver>out_rk_g_num</receiver>
    <slot>clear()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -2496,22 +2476,6 @@ border-bottom-left-radius: 30px;</string>
     <hint type="destinationlabel">
      <x>685</x>
      <y>335</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>out_categories</sender>
-   <signal>currentChanged(int)</signal>
-   <receiver>out_rk_g_num</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>769</x>
-     <y>29</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>695</x>
-     <y>426</y>
     </hint>
    </hints>
   </connection>
